devenv finalised. TODO: change ports

--- a/devenv/backend/.docker/vhost.conf
+++ b/devenv/backend/.docker/vhost.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    DocumentRoot /app/public
+    DocumentRoot /backend/public
 
-    <Directory "/app/public">
+    <Directory "/backend/public">
         AllowOverride all
         Require all granted
     </Directory>
